--- a/package.json
+++ b/package.json
@@ -9,13 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@web5/api": "^0.8.2",
     "autoprefixer": "10.4.14",
+    "crypto-browserify": "^3.12.0",
     "framer-motion": "^10.12.17",
     "next": "13.4.7",
     "postcss": "8.4.24",
+    "process": "^0.11.10",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.10.1",
+    "stream-browserify": "^3.0.0",
     "tailwindcss": "3.3.2"
   }
 }
