--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.10.1",
+    "react-loader-spinner": "^6.1.0",
     "stream-browserify": "^3.0.0",
     "tailwindcss": "3.3.2"
   }
